Update OPTIONS HTTP method

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^18.0.0",
     "@types/typescript": "^2.0.0",
     "argon2": "^0.28.5",
+    "cors": "^2.8.5",
     "url": "^0.11.0"
   }
 }
